# geolip-core

./: README.md  pyproject.toml  requirements.txt
geolip_core/: CLAUDE.md  CLAUDE_CODE_TASKS.md  SYSTEM.md  __init__.py  pyproject.toml
geolip_core/analysis/: __init__.py  geometric.py
geolip_core/claude/: esm2_claude_refresh.md
geolip_core/core/: __init__.py  activation.py  constellation.py  constellation_relay.py  constellation_route.py  core.py  losses.py  memory.py  observer.py  patchwork.py  svd.py  util.py
geolip_core/core/align/: __init__.py  crystallize.py  procrustes.py  stage_align.py
geolip_core/core/associate/: __init__.py  constellation.py  relay.py  route.py
geolip_core/core/curate/: __init__.py  flows.py  gate.py  patchwork.py
geolip_core/core/distinguish/: __init__.py  cv_target.py  losses.py
geolip_core/core/input/: __init__.py  scatter.py  spectral.py  svd.py
geolip_core/distillation/: __init__.py  bank.py
geolip_core/encoder/: __init__.py  encoder_constellation.py  encoder_conv.py  encoder_scatterpoint.py  encoder_transformer.py
geolip_core/example/: __init__.py  constellation_encoder.py  conv_encoder.py  conv_scatter_encoder.py  conv_svd_encoder.py  spectral_encoder.py  transformer_svd_encoder.py
geolip_core/legacy/core/: activation.py  constellation_relay.py  core.py  losses.py  memory.py  util.py
geolip_core/legacy/distillation/: alignment.py  expert.py
geolip_core/linalg/: __init__.py  _backend.py  conduit.py  eigh.py  newton_schulz.py  procrustes.py  svd.py
geolip_core/pipeline/: __init__.py  arbitrary_feature.py  backbone.py  esm2_geometric.py  geolip.py  layer.py  observer.py
geolip_core/training/: __init__.py  curriculum.py
geolip_core/utils/: __init__.py  kernel.py
(+31 files in other folders)
