[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geolip-core"
version = "0.2.0"
description = "Geometric observer framework for deep learning — six-stage paradigm: Input, Mutation, Association, Curation, Distinction, Loss"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "AbstractPhil"},
]

dependencies = [
    "torch>=2.0",
    "geofractal @ git+https://github.com/AbstractEyes/geofractal.git",
]

[project.optional-dependencies]
vision = ["torchvision"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/AbstractEyes/geolip-core"
HuggingFace = "https://huggingface.co/AbstractPhil"
Ecosystem = "https://github.com/AbstractEyes/glip-autoencoder"

[tool.setuptools.packages.find]
include = ["geolip_core*"]